dgx-test/ssd/20211117/gpu=2g.10gb,3g.20gb_1gpu_x_4pod/run20211117_20211118_085354_306133/stderr
  File "/home/kevin/openshift/matrix_benchmark/exec/mlperf/run_ssd.py", line 372
    if !(run_time % 5) and run_time != printed_time:
       ^
SyntaxError: invalid syntax
